# onepilot-hermes-chat

./: .gitignore  CLAUDE.md  README.md  UPSTREAM.md  __init__.py  approvals.py  approvals_cli.py  plugin.yaml  pop_keys.py  pyproject.toml  wrapper_api.py
test/: test_pop_keys.py  test_wrapper_api.py
